# oreilly-course-downloader

./: .gitignore  README.md  download_vtt_transcript.py  find_on24_vtt.js  pyproject.toml
src/oreilly_downloader/: cli.py
src/oreilly_downloader/core/: auth.py  downloader.py  extractor.py  models.py  utils.py  vtt.py
src/oreilly_downloader/core/browsers/: __init__.py  base.py  chrome.py  factory.py  firefox.py  stealth.py
