[project]
name = "oreilly-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vicky-dx", email = "imjustfree4ever@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
oreilly-dl = "oreilly_downloader.cli:main"
